--- a/css/styles.css
+++ b/css/styles.css
@@ -1,56 +1,61 @@
 .container {
-  max-width: 1024px;
-  margin: 0 auto;
+    max-width: 1024px;
+    margin: 0 auto;
 }
 
 .modal {
-  height: 774px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    height: 774px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .difficulty {
-  padding-top: 158px;
+    padding-top: 158px;
 }
+
 .difficulty__form {
-  width: 480px;
-  height: 459px;
-  padding-top: 52px;
-  border-radius: 12px;
-  background: #c2f5ff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 48px;
+    width: 480px;
+    height: 459px;
+    padding-top: 52px;
+    border-radius: 12px;
+    background: #c2f5ff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 48px;
 }
+
 .difficulty .form__title {
-  width: 208px;
-  font-size: 40px;
-  font-style: normal;
-  line-height: 48px;
-  text-align: center;
-  color: #004980;
+    width: 208px;
+    font-size: 40px;
+    font-style: normal;
+    line-height: 48px;
+    text-align: center;
+    color: #004980;
 }
+
 .difficulty .form__levels {
-  margin-bottom: 19px;
-  display: flex;
-  gap: 26px;
+    margin-bottom: 19px;
+    display: flex;
+    gap: 26px;
 }
+
 .difficulty .form .level {
-  width: 98px;
-  height: 98px;
-  border-radius: 12px;
-  background: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 64px;
-  font-style: normal;
-  line-height: 72px;
-  color: var(--blue-100, #0080c1);
-  cursor: pointer;
+    width: 98px;
+    height: 98px;
+    border-radius: 12px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 64px;
+    font-style: normal;
+    line-height: 72px;
+    color: var(--blue-100, #0080c1);
+    cursor: pointer;
 }
+
 .difficulty .form .level--selected {
-  border: 3px solid #0080c1;
-}/*# sourceMappingURL=styles.css.map */
+    border: 3px solid #0080c1;
+}
