--- a/css/ui-kit.css
+++ b/css/ui-kit.css
@@ -1,9 +1,10 @@
 @font-face {
-    font-family: "StratosSkyeng";
+    font-family: StratosSkyeng;
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("../../assets/fonts/stratosskyengweb-regular.woff2") format("woff2");
+    src: url('../../assets/fonts/stratosskyengweb-regular.woff2')
+        format('woff2');
 }
 
 html {
@@ -29,14 +30,14 @@ body::-webkit-scrollbar {
 .button {
     width: 246px;
     height: 50px;
-    background: var(--salad-60, #7AC100);
+    background: var(--salad-60, #7ac100);
     border: none;
     border-radius: 12px;
     cursor: pointer;
     font-size: 24px;
     font-weight: 400;
     line-height: 32px;
-    color: #FFF;
+    color: #fff;
     transition: all 0.5s;
 }
 
