--- a/css/styles.scss
+++ b/css/styles.scss
@@ -110,6 +110,8 @@
 
     .card {
         height: 133px;
+        padding-left: 6px;
+        padding-right: 6px;
         background: #ffffff;
         border-radius: 4px;
 
@@ -119,11 +121,10 @@
         }
 
         &__face {
-            padding: 6px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 10px;
+            gap: 12px;
         }
         .face {
             &__up {
