Webpack afusing complete

--- a/css/ui-kit.css
+++ b/css/ui-kit.css
@@ -3,8 +3,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url('../../assets/fonts/stratosskyengweb-regular.woff2')
-        format('woff2');
+    src: url('../assets/fonts/stratosskyengweb-regular.woff2') format('woff2');
 }
 
 html {
