--- a/css/styles.scss
+++ b/css/styles.scss
@@ -116,7 +116,7 @@
         border-radius: 4px;
 
         &--shirt {
-            background: url(../assets/img/card-shirt.svg);
+            background: url(../static/card-shirt.svg);
             cursor: pointer;
         }
 
